--- a/index.html
+++ b/index.html
@@ -3,56 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>バイク部品ミリタリー紹介</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>ホンダGB250の紹介</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- ヘッダー -->
     <header>
-        <div class="logo">
-            <img src="logo.png" alt="ロゴ" />
-        </div>
-        <h1>ミリタリースタイル バイク部品</h1>
-        <nav>
-            <ul>
-                <li><a href="#">ホーム</a></li>
-                <li><a href="#parts">部品紹介</a></li>
-                <li><a href="#about">私たちについて</a></li>
-                <li><a href="#contact">お問い合わせ</a></li>
-            </ul>
-        </nav>
+        <img src="gb250-image.jpg" alt="Honda GB250" id="header-image">
+        <h1>ホンダGB250</h1>
     </header>
+
+    <!-- ナビゲーションメニュー -->
+    <nav id="navbar">
+        <ul>
+            <li><a href="#about">自己紹介</a></li>
+            <li><a href="#gb250">GB250紹介</a></li>
+            <li><a href="#custom">カスタム内容</a></li>
+            <li><a href="#gallery">ギャラリー</a></li>
+        </ul>
+    </nav>
+
+    <!-- メインコンテンツ -->
     <main>
-        <section id="hero">
-            <h2>ミリタリー感溢れるバイク部品</h2>
-            <p>バイクをカスタムして、あなただけのミリタリースタイルを実現。</p>
+        <section id="about">
+            <h2>自己紹介</h2>
+            <p>ここに自己紹介文を入力してください。</p>
         </section>
-        <section id="parts">
-            <h3>主なバイク部品</h3>
-            <div class="parts-container">
-                <div class="part">
-                    <img src="part1.jpg" alt="部品1">
-                    <h4>耐久性抜群のタイヤ</h4>
-                    <p>オフロードや荒地に最適な高耐久タイヤ。</p>
-                </div>
-                <div class="part">
-                    <img src="part2.jpg" alt="部品2">
-                    <h4>ミリタリーデザインのヘッドライト</h4>
-                    <p>強力なLEDで暗闇でも視界を確保。</p>
-                </div>
-                <div class="part">
-                    <img src="part3.jpg" alt="部品3">
-                    <h4>タクティカルグリップ</h4>
-                    <p>滑り止め加工付きで安心の操作感。</p>
-                </div>
+
+        <section id="gb250">
+            <h2>私のGB250紹介</h2>
+            <p>ホンダGB250は、1980年代に発売されたバイクで、レトロでクラシックなデザインが特徴です。</p>
+        </section>
+
+        <section id="custom">
+            <h2>カスタム内容</h2>
+            <p>GB250に施したカスタム内容を紹介します。例: ハンドルバー変更、タンクのペイントなど。</p>
+        </section>
+
+        <section id="gallery">
+            <h2>ギャラリー</h2>
+            <div class="gallery">
+                <img src="gallery-image1.jpg" alt="GB250 Image 1">
+                <img src="gallery-image2.jpg" alt="GB250 Image 2">
+                <img src="gallery-image3.jpg" alt="GB250 Image 3">
             </div>
         </section>
-        <section id="about">
-            <h3>私たちについて</h3>
-            <p>バイク愛好者のために、高品質でスタイリッシュな部品を提供しています。</p>
-        </section>
     </main>
+
+    <!-- フッター -->
     <footer>
-        <p>&copy; 2025 ミリタリーバイク部品</p>
+        <p>&copy; 2025 ホンダGB250紹介</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
